getpools api: available pools returns pools associated with a crewid of a crew the user is a member of, but not a member of the associated pool. hence available pool - pools they can join are returned.